--- a/src/Components/Trail/Trail.css
+++ b/src/Components/Trail/Trail.css
@@ -6,6 +6,7 @@
 
 .trail_image {
     width: 70vw;
+    height: 45vh;
 }
 
 .trail_deets {
@@ -24,7 +25,6 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding-bottom: 20px;
     width: 70vw;
 }
 
@@ -37,9 +37,17 @@
     margin-bottom: 10px;
 }
 
-.trail_form {
-    width: 70vw;
+.review_container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+}
+
+.trail_review {
+    width: 70vw;
+}
+
+.review_input {
+    outline: none;
+    width: 70vw;
 }
