--- a/src/Components/TrailThumb/TrailThumb.css
+++ b/src/Components/TrailThumb/TrailThumb.css
@@ -1,11 +1,25 @@
+
+
 .thumb_container {
     background-repeat: no-repeat;
     width: 40vw;
     height: 30vh;
+    cursor: pointer;
 }
 
 .thumb_name,
 .thumb_difficulty,
-.thumb_area {
-    color: white;
+.thumb_area,
+.thumb_heart,
+.star_container {
+    color: #ffffff;
+    padding-left: 10px;
+}
+
+.thumb_name {
+    padding-top: 10px;
+}
+
+.thumb_heart {
+    cursor: pointer;
 }
