--- a/src/Components/Trail/Trail.css
+++ b/src/Components/Trail/Trail.css
@@ -7,6 +7,23 @@
 .trail_image {
     width: 70vw;
     height: 45vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.my_rating {
+    color: white;
+    padding-top: 10px;
+    padding-left: 10px;
+}
+
+.overall_rating {
+    color: white;
+    padding-top: 10px;
+    padding-left: 10px;
 }
 
 .trail_deets {
@@ -37,17 +54,25 @@
     margin-bottom: 10px;
 }
 
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+
 .review_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 70vw;
+    margin: auto;
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
 
-.trail_review {
-    width: 70vw;
-}
-
-.review_input {
-    outline: none;
-    width: 70vw;
+.col_75 {
+    width: 100%;
+    margin-top: 6px;
 }
