trail component looking great!

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,7 +1,7 @@
 .thumb_grid {
     display: flex;
     justify-content: space-around;
-    padding-top: 30px;
+    flex-wrap: wrap;
 }
 
 .search_form {
