--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -9,10 +9,25 @@
     flex-direction: row;
 }
 
-.individual_review_name {
+.name_date_rating {
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    justify-content: space-between;
+}
 
+.individual_review_name {
+    display: flex;
+    align-self: center;
+}
+
+.date_rating {
+    display: flex;
+    flex-direction: column;
+    width: 15%;
 }
 
 .individual_review_date_rating {
-
+    display: flex;
+    width: 100%;
 }
