--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -24,10 +24,18 @@
 .date_rating {
     display: flex;
     flex-direction: column;
-    width: 15%;
+    width: 25%;
 }
 
 .individual_review_date_rating {
     display: flex;
     width: 100%;
+}
+
+.review_container {
+    /* width: 100%; */
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
