--- a/src/Components/TrailThumb/TrailThumb.css
+++ b/src/Components/TrailThumb/TrailThumb.css
@@ -1,8 +1,9 @@
 .thumb_container {
     margin-top: 5vw;
     background-repeat: no-repeat;
+    border-radius: 5px;
     width: 40vw;
-    height: 30vh;
+    height: 20vw;
     cursor: pointer;
     background-size: cover;
 }
@@ -17,13 +18,13 @@
 }
 
 .star_container {
-    padding: 10px;
+    padding: 0 0 0 10px;
     width: 100%;
-    height: 10%;
 }
 
 .thumb_rating {
     width: 40%;
+    height: 10%;
     padding-left: 10px;
     color: white;
     display: flex;
@@ -31,12 +32,17 @@
 }
 
 .thumb_name {
-    height: 10%;
+    margin: auto;    
+    height: 8%;
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .thumb_difficulty,
 .thumb_area {
+    padding-top: 5px;
+    font-size: 1.2rem;
+    margin: auto;
     height: 8%;
 }
 
