--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -17,6 +17,7 @@
 }
 
 .individual_review_name {
+    padding-left: 5px;
     display: flex;
     align-self: center;
 }
@@ -25,6 +26,7 @@
     display: flex;
     flex-direction: column;
     width: 25%;
+    text-align: right;
 }
 
 .individual_review_date_rating {
